# api/models/user.go
@@ -2,10 +2,10 @@ package models
 
 import "time"
 
-type CreateUserRequest struct {
+type CreateOrUpdateUserRequest struct {
 	FirstName   string  `json:"first_name" binding:"required,min=2,max=50"`
 	LastName    string  `json:"last_name" binding:"required,min=2,max=50"`
-	Username    string `json:"username" binding:"min=2,max=30"`
+	Username    string  `json:"username" binding:"min=2,max=30"`
 	Email       string  `json:"email" binding:"required,email,min=15,max=100"`
 	Password    string  `json:"password" binding:"required,min=6,max=16"`
 	PhoneNumber *string `json:"phone_number" binding:"min=9,max=20"`
@@ -16,7 +16,7 @@ type GetUserResponse struct {
 	ID          int64      `json:"id"`
 	FirstName   string     `json:"first_name"`
 	LastName    string     `json:"last_name"`
-	Username    string    `json:"username"`
+	Username    string     `json:"username"`
 	Email       string     `json:"email"`
 	PhoneNumber *string    `json:"phone_number"`
 	ImageUrl    *string    `json:"image_url"`
@@ -26,7 +26,7 @@ type GetUserResponse struct {
 
 type GetAllUsers struct {
 	Users []*GetUserResponse `json:"users"`
-	Count int64          `json:"count"`
+	Count int64              `json:"count"`
 }
 
 type GetAllUsersParams struct {
